--- a/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
+++ b/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
@@ -50,7 +50,7 @@ domain	lists.openfoundry.org
 
 ## Listmasters email list comma separated
 ## Sympa will associate listmaster privileges to these email addresses (mail and web interfaces). Some error reports may also be sent to these addresses.
-listmaster	your_email_address@lists.openfoundry.org
+listmaster	listmaster@lists.openfoundry.org
 
 ## Local part of sympa email adresse
 ## Effective address will be [EMAIL]@[HOST]
@@ -143,14 +143,14 @@ db_type	mysql
 db_name	sympa
 
 ## The host hosting your sympa database
-#db_host	localhost
+db_host	localhost
 
 ## Database user for connexion
-#db_user	sympa
+db_user	sympa
 
 ## Database password (associated to the db_user)
 ## What ever you use a password or not, you must protect the SQL server (is it a not a public internet service ?)
-#db_passwd	your_passwd
+db_passwd	mamasayuncoveredpasswdisalsooktoo
 
 ## Database private extention to user table
 ## You need to extend the database format with these fields
@@ -163,5 +163,5 @@ db_name	sympa
 ###\\\\ Web interface ////###
 
 ## Sympa's main page URL
-wwsympa_url	http://lists.openfoundry.org/sympa
+wwsympa_url	http://lists.openfoundry.org/Sympa
 
