--- a/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
+++ b/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
@@ -150,7 +150,7 @@ db_user	sympa
 
 ## Database password (associated to the db_user)
 ## What ever you use a password or not, you must protect the SQL server (is it a not a public internet service ?)
-db_passwd	mamasayuncoveredpasswdisalsooktoo
+db_passwd	--SYMPA_DB_PASSWD--
 
 ## Database private extention to user table
 ## You need to extend the database format with these fields
