--- a/trunk/services/sympa/openfoundry/subst.env
+++ b/trunk/services/sympa/openfoundry/subst.env
@@ -5,3 +5,10 @@ WWSCONFIG=/usr/local/etc/sympa/wwsympa.conf
 CONFIG=/usr/local/etc/sympa/sympa.conf
 USER=sympa
 ETCBINDIR=/usr/local/share/sympa
+EXPL_DIR=/usr/local/sympa/expl
+ETCDIR=/usr/local/etc/sympa
+SENDMAIL_ALIASES=/etc/mail/sympa_aliases
+PIDDIR=/var/run
+LOCALEDIR=/usr/local/share/locale
+SPOOLDIR=/usr/local/sympa/spool
+GROUP=sympa
