--- a/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
+++ b/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
@@ -165,3 +165,7 @@ db_passwd	--SYMPA_DB_PASSWD--
 ## Sympa's main page URL
 wwsympa_url	http://lists.openfoundry.org/Sympa
 
+## CSS color
+color_1 #B5BEBD
+color_3 #D5D0BA
+color_4 white
