--- a/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
+++ b/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
@@ -169,3 +169,6 @@ wwsympa_url	http://lists.openfoundry.org/Sympa
 color_1 #B5BEBD
 color_3 #D5D0BA
 color_4 white
+
+# remove et_EE/oc, add zh_TW
+supported_lang de,cs,el,es,en_US,fr,hu,it,ja_JP,nl,pt_BR,sv,tr,zh_TW
