customize authorization settings for the "owner" role

--- a/services/sympa/source/src/etc/edit_list.conf
+++ b/services/sympa/source/src/etc/edit_list.conf
@@ -75,25 +75,25 @@ bounce 				owner,privileged_owner 		read
 
 archive 			owner,privileged_owner 		read
 
-host 				owner,privileged_owner 		read
+host 				owner,privileged_owner 		hidden
 
 account 			owner,privileged_owner 		hidden
 
-family_name                     listmaster,privileged_owner,owner  read
+family_name                     listmaster,privileged_owner,owner  hidden
 
-owner 				owner 				read
+owner 				owner 				hidden
 owner.profile 			owner,privileged_owner 		read
 owner 				privileged_owner 		write
 owner.info	 		owner 				hidden
 
-owner_include			owner				read
+owner_include			owner				hidden
 
-editor 				owner 				read
+editor 				owner 				hidden
 editor 				privileged_owner 		write
 
-editor_include			owner				read
+editor_include			owner				hidden
 
-send 				owner 				read
+send 				owner 				write
 send 				privileged_owner 		write
 
 status 				owner 				hidden
@@ -119,6 +119,8 @@ default_user_options 		owner,privileged_owner 		hidden
 create_list_request.tt2		owner,privileged_owner 		hidden
 
 list_created.tt2 		owner,privileged_owner 		hidden
+
+topics				owner				hidden
 
 default 			privileged_owner 		write
 default 			owner 				write
