--- a/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
+++ b/trunk/services/sympa/openfoundry/usr/local/etc/sympa/sympa.conf
@@ -163,7 +163,7 @@ db_passwd	--SYMPA_DB_PASSWD--
 ###\\\\ Web interface ////###
 
 ## Sympa's main page URL
-wwsympa_url	http://lists.openfoundry.org/Sympa
+wwsympa_url	http://rt.openfoundry.org/Sympa
 
 ## CSS color
 color_1 #B5BEBD
