--- a/trunk/services/vcs/usr/local/etc/libnss-mysql.cfg
+++ b/trunk/services/vcs/usr/local/etc/libnss-mysql.cfg
@@ -1,32 +1,19 @@
-getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
-            expire \
+#getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,       shell,                       expire
+getpwnam    SELECT username,'*',  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users \
             WHERE username='%1$s' \
             LIMIT 1
-getpwuid    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
-            expire \
-            FROM users \
-            WHERE uid='%1$u' \
-            LIMIT 1
-getpwent    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
-            expire \
+getpwuid    SELECT 'www',   '*',  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
+            FROM (SELECT 1) AS DUMMY \
+	    WHERE 80='%1$u'
+getpwent    SELECT username,'*',  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users
-getgrnam    SELECT name,password,gid \
-            FROM groups \
-            WHERE name='%1$s' \
-            LIMIT 1
-getgrgid    SELECT name,password,gid \
-            FROM groups \
-            WHERE gid='%1$u' \
-            LIMIT 1
-getgrent    SELECT name,password,gid \
-            FROM groups
-memsbygid   SELECT username \
-            FROM grouplist \
-            WHERE gid='%1$u'
-gidsbymem   SELECT gid \
-            FROM grouplist \
-            WHERE username='%1$s'
+#getgrnam    SELECT name,password,gid \
+getgrnam    SELECT 'www',     '*', 80 FROM (SELECT 1) AS DUMMY WHERE 'www'='%1$s'
+getgrgid    SELECT 'www',     '*', 80 FROM (SELECT 1) AS DUMMY WHERE 80='%1$u'
+getgrent    SELECT 'www',     '*', 80
+memsbygid   SELECT username FROM users WHERE 80='%1$u'
+gidsbymem   SELECT 80 FROM users WHERE username='%1$s'
 
 host        localhost
 database    auth
@@ -34,4 +21,5 @@ username    nss-user
 password    userpass
 #socket      /var/lib/mysql/mysql.sock
 #port        3306
+
 
