account settings for vcs system map all foundry users to www(80)

--- a/services/vcs/usr/local/etc/libnss-mysql-root.cfg
+++ b/services/vcs/usr/local/etc/libnss-mysql-root.cfg
@@ -1,16 +1,13 @@
-getpwnam    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
-            shell,expire \
+getpwnam    SELECT username,password,  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users \
             WHERE username='%1$s' \
             LIMIT 1
-getpwuid    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
-            shell,expire \
-            FROM users \
-            WHERE uid='%1$u' \
-            LIMIT 1
-getpwent    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
-            shell,expire \
+getpwuid    SELECT 'www',        '*',  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
+            FROM (SELECT 1) AS DUMMY \
+            WHERE 80='%1$u'
+getpwent    SELECT username,password,  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users
+
 
 username    nss-root
 password    rootpass
