--- a/trunk/services/vcs/usr/local/etc/libnss-mysql-root.cfg
+++ b/trunk/services/vcs/usr/local/etc/libnss-mysql-root.cfg
@@ -1,11 +1,11 @@
-getpwnam    SELECT username,password,  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
+getpwnam    SELECT username,password,  80, 80,       0,   '',   '','/','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users \
             WHERE username='%1$s' \
             LIMIT 1
-getpwuid    SELECT 'www',        '*',  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
+getpwuid    SELECT 'www',        '*',  80, 80,       0,   '',   '','/','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM (SELECT 1) AS DUMMY \
             WHERE 80='%1$u'
-getpwent    SELECT username,password,  80, 80,       0,   '',   '','/nonexistent','/usr/local/bin/cvs_svn_only.sh', 0 \
+getpwent    SELECT username,password,  80, 80,       0,   '',   '','/','/usr/local/bin/cvs_svn_only.sh', 0 \
             FROM users
 
 
