--- a/trunk/services/vcs/usr/local/viewvc/viewvc.conf
+++ b/trunk/services/vcs/usr/local/viewvc/viewvc.conf
@@ -69,7 +69,7 @@
 # names to them. Each root should be given by a "name: path" value. Multiple
 # roots should be separated by commas and can be placed on separate lines.
 #
-cvs_roots = cvs: /home/cvsroot
+cvs_roots = cvs: /cvs
 
 #
 # This setting specifies each of the Subversion roots (repositories)
@@ -97,7 +97,7 @@ cvs_roots = cvs: /home/cvsroot
 # Each parent path is processed sequentially, so repositories under
 # later parent paths may override earlier ones.
 #
-#root_parents = /home/svn-repositories : svn,
+root_parents = /svn : svn,
 #               /home/cvs-repositories : cvs
 
 # this is the name of the default root
