--- a/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
+++ b/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
@@ -1,4 +1,3 @@
-LoadModule python_module libexec/apache22/mod_python.so
 LoadModule authnz_external_module libexec/apache22/mod_authnz_external.so
 
 NameVirtualHost *
@@ -18,7 +17,7 @@ NameVirtualHost *
         
         <LimitExcept GET PROPFIND OPTIONS REPORT>
             AuthType Basic
-            AuthName 'aaahhh'
+            AuthName 'OpenFoudry'
             AuthBasicProvider external
             AuthExternal foo
             Require valid-user
@@ -31,13 +30,8 @@ NameVirtualHost *
 <VirtualHost *>
     ServerName viewvc.openfoundry.org
 
-    PythonPath "sys.path+['/usr/local/viewvc/bin/mod_python']"
-    Alias /cvs/viewvc /usr/local/viewvc/bin/mod_python/of-viewvc.py
-    <Directory /usr/local/viewvc/bin/mod_python>
-        #PythonDebug on
-        AddHandler mod_python .py
-        PythonHandler handler
-        
+    ScriptAlias /viewvc /usr/local/viewvc/bin/cgi/viewvc.cgi
+    <Directory /usr/local/viewvc/bin/cgi>
         AllowOverride None
         Order allow,deny
         Allow from all
