replace settings with values from the centralized config

--- a/services/vcs/usr/local/etc/libnss-mysql-root.cfg
+++ b/services/vcs/usr/local/etc/libnss-mysql-root.cfg
@@ -9,6 +9,5 @@ getpwent    SELECT username,password,  80, 80,       0,   '',   '','/','/usr/loc
             FROM users
 
 
-username    nss-root
-password    rootpass
-
+username    --NSS_DATABASE_ROOT_USER--
+password    --NSS_DATABASE_ROOT_PASSWORD--
