--- a/services/vcs/usr/local/etc/libnss-mysql.cfg
+++ b/services/vcs/usr/local/etc/libnss-mysql.cfg
@@ -16,10 +16,8 @@ memsbygid   SELECT username FROM users WHERE 80='%1$u'
 gidsbymem   SELECT 80 FROM users WHERE username='%1$s'
 
 host        localhost
-database    auth
-username    nss-user
-password    userpass
+database    --NSS_DATABASE--
+username    --NSS_DATABASE_USER_USER--
+password    --NSS_DATABASE_USER_PASSWORD--
 #socket      /var/lib/mysql/mysql.sock
 #port        3306
-
-
