--- a/branches/0.1/config/database.yml
+++ b/branches/0.1/config/database.yml
@@ -17,6 +17,7 @@ development:
   username: root
   password:
   socket: /tmp/mysql.sock
+  encoding: UTF8
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
@@ -27,6 +28,7 @@ test:
   username: root
   password:
   socket: /tmp/mysql.sock
+  encoding: UTF8
 
 production:
   adapter: mysql
@@ -34,3 +36,4 @@ production:
   username: root
   password: 
   socket: /tmp/mysql.sock
+  encoding: UTF8
