--- a/trunk/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
+++ b/trunk/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
@@ -4,11 +4,11 @@ NameVirtualHost *
 
 # Ref: http://svnbook.red-bean.com/en/1.0/ch06s04.html
 <VirtualHost *>
-    ServerName svn.openfoundry.org
+    ServerName --SVN_HOST--
 
     <Location />
         DAV svn
-        SVNParentPath /svn
+        SVNParentPath --SVN_PARENT_PATH--
         #SVNAutoversioning on
         
         AllowOverride None
@@ -28,7 +28,7 @@ NameVirtualHost *
 
 
 <VirtualHost *>
-    ServerName viewvc.openfoundry.org
+    ServerName --VIEWVC_HOST--
 
     ScriptAlias /viewvc /usr/local/viewvc/bin/cgi/viewvc.cgi
     <Directory /usr/local/viewvc/bin/cgi>
