--- a/trunk/services/vcs/usr/local/viewvc/viewvc.conf
+++ b/trunk/services/vcs/usr/local/viewvc/viewvc.conf
@@ -69,7 +69,7 @@
 # names to them. Each root should be given by a "name: path" value. Multiple
 # roots should be separated by commas and can be placed on separate lines.
 #
-cvs_roots = cvs: /cvs
+cvs_roots = cvs: --CVSROOT--
 
 #
 # This setting specifies each of the Subversion roots (repositories)
@@ -97,12 +97,12 @@ cvs_roots = cvs: /cvs
 # Each parent path is processed sequentially, so repositories under
 # later parent paths may override earlier ones.
 #
-root_parents = /svn : svn,
+root_parents = --SVN_PARENT-PATH-- : svn,
 #               /home/cvs-repositories : cvs
 
 # this is the name of the default root
 # (ignored when root_as_url_component is turned on)
-default_root = cvs
+default_root = svn
 
 # uncomment if the RCS binaries are not on the standard path
 #rcs_path = /usr/bin/
