--- a/services/vcs/usr/local/etc/openfoundry_root.conf.dist
+++ b/services/vcs/usr/local/etc/openfoundry_root.conf.dist
@@ -1,13 +1,15 @@
 {
-	"DUMP_SECRET": "####################################",
+	"DUMP_SECRET": "###########",
 
 	"JSON_DUMP_CACHE_PATH": "/usr/local/etc/openfoundry_dump.json",
 	"ROOT_JSON_DUMP_CACHE_PATH": "/usr/local/etc/openfoundry_dump_root.json",
 	"JSON_DUMP_REFRESH_INTERVAL": 600,
 
 	"NSS_DATABASE": "auth",
-	"NSS_DATABASE_USER": "root",
-	"NSS_DATABASE_PASSWORD": "",
+	"NSS_DATABASE_ROOT_USER": "nss-root",
+	"NSS_DATABASE_ROOT_PASSWORD": "nss-root-pass",
+	"NSS_DATABASE_USER_USER": "nss-user",
+	"NSS_DATABASE_USER_PASSWORD": "nss-user-pass",
 
 	"CVSROOT": "/cvs",
 	"CVS_OWNER": 80,
@@ -15,5 +17,8 @@
 
 	"SVN_PARENT_PATH": "/svn",
 	"SVN_OWNER": 80,
-	"SVN_GROUP": 80
+	"SVN_GROUP": 80,
+	"SVN_HOST": "svn.openfoundry.org",
+
+	"VIEWVC_HOST": "viewvc.of.openfoundry.org"
 }
