--- a/trunk/services/vcs/usr/local/viewvc/viewvc.conf
+++ b/trunk/services/vcs/usr/local/viewvc/viewvc.conf
@@ -97,12 +97,12 @@ cvs_roots = cvs: --CVSROOT--
 # Each parent path is processed sequentially, so repositories under
 # later parent paths may override earlier ones.
 #
-root_parents = --SVN_PARENT-PATH-- : svn,
+root_parents = --SVN_PARENT_PATH-- : svn
 #               /home/cvs-repositories : cvs
 
 # this is the name of the default root
 # (ignored when root_as_url_component is turned on)
-default_root = svn
+default_root = cvs
 
 # uncomment if the RCS binaries are not on the standard path
 #rcs_path = /usr/bin/
