--- a/trunk/services/vcs/usr/local/etc/openfoundry.conf.dist
+++ b/trunk/services/vcs/usr/local/etc/openfoundry.conf.dist
@@ -1,3 +1,4 @@
 {
-	"JSON_DUMP_CACHE_PATH": "/usr/local/etc/openfoundry/openfoundry_dump.json"
+	"JSON_DUMP_CACHE_PATH": "/usr/local/etc/openfoundry/openfoundry_dump.json",
+	"DATA_BACKEND": "RT"
 }
