--- a/trunk/services/vcs/usr/local/etc/apache22/Includes/ssl.conf
+++ b/trunk/services/vcs/usr/local/etc/apache22/Includes/ssl.conf
@@ -70,15 +70,33 @@ SSLMutex  file:/var/run/ssl_mutex
 ##
 ## SSL Virtual Host Context
 ##
-
-<VirtualHost _default_:443>
+LoadModule authnz_external_module libexec/apache22/mod_authnz_external.so
+NameVirtualHost *:443
+<VirtualHost *:443>
 
 #   General setup for the virtual host
-DocumentRoot "/usr/local/www/apache22/data"
-ServerName www.example.com:443
-ServerAdmin you@example.com
-ErrorLog /var/log/httpd-error.log
-TransferLog /var/log/httpd-access.log
+
+    # Ref: http://svnbook.red-bean.com/en/1.0/ch06s04.html
+    ServerName --SVN_HOST-- 
+
+    <Location />
+        DAV svn
+        SVNParentPath /svn
+        #SVNAutoversioning on
+
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+
+        <LimitExcept GET PROPFIND OPTIONS REPORT>
+            AuthType Basic
+            AuthName 'OpenFoudry'
+            AuthBasicProvider external
+            AuthExternal foo
+            Require valid-user
+        </LimitExcept>
+    </Location>
+    AddExternalAuth foo /usr/local/bin/pwauth
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -96,7 +114,7 @@ SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
 #   in mind that if you have both an RSA and a DSA certificate you
 #   can configure both in parallel (to also allow the use of DSA
 #   ciphers, etc.)
-SSLCertificateFile /usr/local/etc/apache22/server.crt
+SSLCertificateFile /usr/local/etc/apache22/ssl/subversion.crt
 #SSLCertificateFile /usr/local/etc/apache22/server-dsa.crt
 
 #   Server Private Key:
@@ -104,7 +122,7 @@ SSLCertificateFile /usr/local/etc/apache22/server.crt
 #   directive to point at the key file.  Keep in mind that if
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
-SSLCertificateKeyFile /usr/local/etc/apache22/server.key
+SSLCertificateKeyFile /usr/local/etc/apache22/ssl/server.key
 #SSLCertificateKeyFile /usr/local/etc/apache22/server-dsa.key
 
 #   Server Certificate Chain:
