--- a/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
+++ b/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
@@ -1,9 +1,9 @@
 LoadModule authnz_external_module libexec/apache22/mod_authnz_external.so
 
-NameVirtualHost *
+NameVirtualHost *:80
 
 # Ref: http://svnbook.red-bean.com/en/1.0/ch06s04.html
-<VirtualHost *>
+<VirtualHost *:80>
     ServerName --SVN_HOST--
 
     <Location />
@@ -27,7 +27,7 @@ NameVirtualHost *
 </VirtualHost>
 
 
-<VirtualHost *>
+<VirtualHost *:80>
     ServerName --VIEWVC_HOST--
 
     ScriptAlias /viewvc /usr/local/viewvc/bin/cgi/viewvc.cgi
