update test cases

--- a/branches/0.1/test/fixtures/projects.yml
+++ b/branches/0.1/test/fixtures/projects.yml
@@ -1,5 +1,18 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-one:
-  id: 1
-two:
-  id: 2
+<%index=0%>
+<% %w(openfoundry closefoundry twrug tossug meowmoew newname pcman lazybuntu wizardry keroro).each do |projectname| %>
+<%=projectname%>:
+  id: <%=index+=1%>
+  unixname: <%=projectname%>
+  projectname: <%=projectname%> ver 0.0.0 super song
+  rationale: <%=projectname%>, it is a good day to die!!
+  publicdescription: to <%=projectname%> or not to <%=projectname%>, that is a question~
+  contactinfo: contact@<%=projectname%>.openfoundry.org
+  maturity: mission impossible for <%=projectname%>
+  license: BSD
+  contentlicense: GPL
+  platform: FreeBSD,linux
+  programminglanguage: ruby
+  intendedaudience: no haha
+<%end%>
+  
