--- a/branches/0.1/test/fixtures/users.yml
+++ b/branches/0.1/test/fixtures/users.yml
@@ -23,7 +23,7 @@ luors:
 bob:
   id: 1000001
   login: bob
-  salted_password: ef94c16f6c124a4e84cc215c164767bfa25f6e92 # atest
+  salted_password: <%="atest".crypt("$1$atest") %>
   salt: 7f8b036f9b647d46d22abdbfc8113f44a88f9889
   email: bob@test.com
   verified: 1
@@ -31,7 +31,7 @@ bob:
 existingbob:
   id: 1000002
   login: existingbob
-  salted_password: 99d6b680d4bfa81cbd383ffa0390bb03323a0b9a # atest
+  salted_password: <%="atest".crypt("$1$atest") %>
   salt: fc76daa7bc4e4b7833375cf9deca38beee4c5581
   email: existingbob@test.com
   verified: 1  
@@ -39,7 +39,7 @@ existingbob:
 longbob:
   id: 1000003
   login: longbob
-  salted_password: c841391e1d29100a4920de7a8fbb4b0fd180c6c0 # alongtest
+  salted_password: <%="longatest".crypt("$1$longatest") %>
   salt: c068e3671780f16898c0a8295ae8d82cc59713e2
   email: longbob@test.com
   verified: 1
@@ -47,7 +47,7 @@ longbob:
 deletebob1:
   id: 1000004
   login: deletebob1
-  salted_password: c841391e1d29100a4920de7a8fbb4b0fd180c6c0 # alongtest
+  salted_password: <%="longatest".crypt("$1$longatest") %>
   salt: c068e3671780f16898c0a8295ae8d82cc59713e2
   email: deletebob1@test.com
   verified: 1
