status: apply / approve / reject ..

--- a/branches/0.1/test/fixtures/projects.yml
+++ b/branches/0.1/test/fixtures/projects.yml
@@ -14,5 +14,7 @@
   platform: FreeBSD,linux
   programminglanguage: ruby
   intendedaudience: no haha
+  creator: 1
+  status: <%= Project::STATUS[:READY] %>
 <%end%>
   
