--- a/branches/0.1/test/fixtures/news.yml
+++ b/branches/0.1/test/fixtures/news.yml
@@ -27,7 +27,7 @@ of4:
   tags: ""
   catid: 0
     
-of4:
+prj1-1:
   id: 5
   subject: "新酷音輸入法詞庫 libchewing-data - New release: 283"
   description: "新酷音輸入法詞庫 libchewing-data - New release: 283"
