--- a/branches/0.1/test/fixtures/news.yml
+++ b/branches/0.1/test/fixtures/news.yml
@@ -27,41 +27,41 @@ of4:
   tags: ""
   catid: 0
     
-prj1-1:
+prj1_1:
   id: 5
   subject: "新酷音輸入法詞庫 libchewing-data - New release: 283"
   description: "新酷音輸入法詞庫 libchewing-data - New release: 283"
   tags: ""
   catid: 1
   
-prj1-2:
+prj1_2:
   id: 6
   subject: "Lazybuntu - New release: 0.1.3"
   description: "Lazybuntu - New release: 0.1.3"
   tags: ""
   catid: 1
     
-prj1-3:
+prj1_3:
   id: 7
   subject: "Pixmicat! : 圖咪貓貼圖版程式 - New release: 4th.Release.2"
   description: "Pixmicat! : 圖咪貓貼圖版程式 - New release: 4th.Release.2"
   tags: ""
   catid: 1
     
-prj1-4:
+prj1_4:
   id: 8
   subject: "PHP黑店-Hank 中文翻譯計畫之論壇程式 - New release: 2mercuryboard1.1.6"
   description: "PHP黑店-Hank 中文翻譯計畫之論壇程式 - New release: 2mercuryboard1.1.6"
   tags: ""
   catid: 1
-prj1-5:
+prj1_5:
   id: 9
   subject: "PHP黑店-Hank 中文翻譯計畫之CMS-Blog - New release: 2F2blog1.2"
   description: "PHP黑店-Hank 中文翻譯計畫之CMS-Blog - New release: 2F2blog1.2"
   tags: ""
   catid: 1
     
-prj1-6:
+prj1_6:
   id: 10
   subject: "Hinedo - 輕鬆聽 Hinet Radio - New release: 2007.11.18"
   description: "Hinedo - 輕鬆聽 Hinet Radio - New release: 2007.11.18"
