--- a/branches/0.1/test/fixtures/users.yml
+++ b/branches/0.1/test/fixtures/users.yml
@@ -20,6 +20,13 @@ luors:
     email: luors@iis
     verified: 1
 
+thkuo:
+    id: 4
+    login: thkuo
+    salted_password: <%="123456".crypt("$1$123456") %>
+    email: thkuo@iis
+    verified: 1
+
 dummy:
     id: 99999
     login: dummy
