--- a/branches/0.1/test/fixtures/roles_users.yml
+++ b/branches/0.1/test/fixtures/roles_users.yml
@@ -6,3 +6,9 @@ user<%=user_id%>_role<%=role_id%>:
   role_id: <%=role_id%>
 <%end%>
 <%end%>
+
+<% 1.upto 3 do |user_id| %>
+user<%=user_id%>_site_admin:
+  user_id: <%=user_id%>
+  role_id: 32767
+<%end%>
