--- a/branches/0.1/test/fixtures/users.yml
+++ b/branches/0.1/test/fixtures/users.yml
@@ -13,7 +13,7 @@ aguo:
     salted_password: <%="123456".crypt("$1$123456") %>
     email: aguo@iis
     verified: 1
-    icons: 2
+    icon: 2
 
 luors:
     id: 3
@@ -21,7 +21,7 @@ luors:
     salted_password: <%="123456".crypt("$1$123456") %>
     email: luors@iis
     verified: 1
-    icons: 3
+    icon: 3
 
 thkuo:
     id: 4
@@ -29,7 +29,7 @@ thkuo:
     salted_password: <%="123456".crypt("$1$123456") %>
     email: thkuo1@iis
     verified: 1
-    icons: 4
+    icon: 4
 
 dummy:
     id: 99999
