--- a/branches/0.1/test/fixtures/users.yml
+++ b/branches/0.1/test/fixtures/users.yml
@@ -31,6 +31,14 @@ thkuo:
     verified: 1
     icon: 4
 
+guest:
+    id: 123456
+    login: guest
+    salted_password: <%="123456".crypt("$1$123456") %>
+    email: guest@iis
+    verified: 0
+    icon: 1
+
 dummy:
     id: 99999
     login: dummy
