--- a/branches/0.1/test/fixtures/users.yml
+++ b/branches/0.1/test/fixtures/users.yml
@@ -3,7 +3,7 @@ tim:
     id: 1
     login: tim
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: tim@iis
+    email: tim@iis.xxx.tw
     verified: 1
     icon: 1
 
@@ -11,7 +11,7 @@ aguo:
     id: 2
     login: aguo
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: aguo@iis
+    email: aguo@iis.xxx.tw
     verified: 1
     icon: 2
 
@@ -19,7 +19,7 @@ luors:
     id: 3
     login: luors
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: luors@iis
+    email: luors@iis.xxx.tw
     verified: 1
     icon: 3
 
@@ -27,7 +27,7 @@ thkuo:
     id: 4
     login: thkuo
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: thkuo1@iis
+    email: thkuo1@iis.xxx.tw
     verified: 1
     icon: 4
 
@@ -35,7 +35,7 @@ guest:
     id: 123456
     login: guest
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: guest@iis
+    email: guest@test.com
     verified: 0
     icon: 1
 
@@ -43,7 +43,7 @@ dummy:
     id: 99999
     login: dummy
     salted_password: <%="123456".crypt("$1$123456") %>
-    email: dummy@iis
+    email: dummy@test.com
     verified: 1
 
 bob:
