--- a/of/config/database.yml
+++ b/of/config/database.yml
@@ -14,10 +14,11 @@
 development:
   adapter: mysql
   database: of_development
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  username: openfoundry
+  password: 
+  host: 192.168.0.10
   encoding: UTF8
+# socket: /tmp/mysql.sock
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
@@ -25,15 +26,17 @@ development:
 test:
   adapter: mysql
   database: of_test
-  username: root
+  username: openfoundry
   password:
-  socket: /tmp/mysql.sock
+  host: 192.168.0.10
   encoding: UTF8
+# socket: /tmp/mysql.sock
 
 production:
   adapter: mysql
   database: of_production
   username: root
   password: 
-  socket: /tmp/mysql.sock
+  host: 192.168.0.10
   encoding: UTF8
+# socket: /tmp/mysql.sock
