--- a/trunk/of/config/database.yml
+++ b/trunk/of/config/database.yml
@@ -13,10 +13,10 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql
-  database: of_development
-  username: openfoundry
-  password: 
-  host: 192.168.0.10
+  database: --DB_PREFIX--_development
+  username: --DB_USER--
+  password: --DB_PASS--
+  host: --DB_HOST--
   encoding: UTF8
 # socket: /tmp/mysql.sock
 
@@ -25,18 +25,18 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
-  database: of_test
-  username: openfoundry
-  password:
-  host: 192.168.0.10
+  database: --DB_PREFIX--_test
+  username: --DB_USER--
+  password: --DB_PASS--
+  host: --DB_HOST--
   encoding: UTF8
 # socket: /tmp/mysql.sock
 
 production:
   adapter: mysql
-  database: of_production
-  username: root
-  password: 
-  host: 192.168.0.10
+  database: --DB_PREFIX--_production
+  username: --DB_USER--
+  password: --DB_PASS--
+  host: --DB_HOST--
   encoding: UTF8
 # socket: /tmp/mysql.sock
