--- a/services/vcs/usr/local/openfoundry/etc/openfoundry_root.conf.dist
+++ b/services/vcs/usr/local/openfoundry/etc/openfoundry_root.conf.dist
@@ -1,5 +1,5 @@
 {
-	"DUMP_SOURCE_URL": "http://of.openfoundry.org/openfoundry/foundry_dump?secret=",
+	"DUMP_SOURCE_URL": "http://192.168.0.20:3000/openfoundry/foundry_dump?secret=",
 	"DUMP_SECRET": "###########",
 
 
