add paramaters for installation

--- a/services/proftpd/proftpd_with_mysql.conf
+++ b/services/proftpd/proftpd_with_mysql.conf
@@ -7,14 +7,14 @@
 # and a single anonymous login.  It assumes that you have a user/group
 # "nobody" and "ftp" for normal operation and anon.
 
-ServerName			"OSSF dev test ftpd"
+ServerName			"%%FTP_ServerName%%"
 RequireValidShell		off
 
 # Umask 022 is a good standard umask to prevent new dirs and files
 # from being group and world writable.
 Umask				003
 
-DefaultRoot /usr/upload
+DefaultRoot %%FTP_HOME%%
 
 ############################################################
 #
@@ -28,7 +28,7 @@ SQLAuthTypes Crypt
 #for testing...
 #SQLAuthTypes Plaintext
 SQLBackend mysql
-SQLConnectInfo ftp_users@localhost:3306 ossfdev 4021478
+SQLConnectInfo ftp_users@%%DB_HOST%%:3306 %%DB_USER%% %%DB_PASS%%
 SQLOptions useNormalizedGroupSchema
 SQLLogFile /var/run/proftpd/proftpd.mod_sql.log
 QuotaEngine on
@@ -81,6 +81,6 @@ TLSRenegotiate required off
 # for dir setting
 #
 ############################################################
-<Directory /usr/upload/*>
+<Directory %%FTP_HOME%%/*>
 HideNoAccess on
 </Directory>
