--- a/of/test/fixtures/projects.yml
+++ b/of/test/fixtures/projects.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 <%index=1000%>
-<% %w(openfoundry closefoundry twrug tossug meowmoew newname pcman lazybuntu wizardry keroro taipei100 ossf200 pqrs).each do |projectname| %>
-<%=projectname%>:
+<% %w(openfoundry closefoundry twrug tossug meowmoew newname pcman lazybuntu wizardry keroro taipei100 ossf200 pqrs).each do |summary| %>
+<%=summary%>:
   icon: 5
   id: <%=index+=1%>
-  unixname: <%=projectname%>
-  projectname: <%=projectname%> ver 0.0.0 super song
-  rationale: <%=projectname%>, it is a good day to die!!
-  publicdescription: to <%=projectname%> or not to <%=projectname%>, that is a question~
-  contactinfo: contact@<%=projectname%>.openfoundry.org
-  maturity: mission impossible for <%=projectname%>
+  unixname: <%=summary%>
+  summary: <%=summary%> ver 0.0.0 super song
+  rationale: <%=summary%>, it is a good day to die!!
+  publicdescription: to <%=summary%> or not to <%=summary%>, that is a question~
+  contactinfo: contact@<%=summary%>.openfoundry.org
+  maturity: mission impossible for <%=summary%>
   license: BSD
   contentlicense: GPL
   platform: FreeBSD,linux
