add server alias as a poor workaround for pound
http://of.openfoundry.org/viewvc => http://viewvc.of.openfoundry.org/viewvc

--- a/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
+++ b/services/vcs/usr/local/etc/apache22/Includes/vcs.conf
@@ -29,6 +29,7 @@ NameVirtualHost *:80
 
 <VirtualHost *:80>
     ServerName --VIEWVC_HOST--
+    ServerAlias --VIEWVC_SERVER_ALIAS_HOST--
 
     ScriptAlias /viewvc /usr/local/viewvc/bin/cgi/viewvc.cgi
     <Directory /usr/local/viewvc/bin/cgi>
