--- a/services/vcs/usr/local/viewvc/viewvc.conf
+++ b/services/vcs/usr/local/viewvc/viewvc.conf
@@ -139,7 +139,7 @@ use_rcsparse = 0
 
 # This address is shown in the footer of the generated pages. 
 # It must be replaced with the address of the local repository maintainer.
-address = <a href="mailto:cvs-admin@insert.your.domain.here">No admin address has been configured</a>
+address = --VIEWVC_ADDRESS--
 
 #
 # This should contain a list of modules in the repository that should not be
