--- a/services/vcs/etc/newsyslog.conf
+++ b/services/vcs/etc/newsyslog.conf
@@ -37,3 +37,5 @@
 /var/log/weekly.log			640  5	   1	$W6D0 JN
 /var/log/wtmp				644  3	   *	@01T05 B
 /var/log/xferlog			600  7	   100	*     JC
+/var/log/openfoundry_sync.log		600  7	   *	@T00  JC
+/var/log/openfoundry_backup.log		600  7	   *	@T00  JC
